feat: setAllowedOrigins(all)